--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "10.4.19",
+    "next": "^14.2.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+  },
+  "devDependencies": {
     "@types/node": "20.12.12",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "autoprefixer": "10.4.19",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
-    "next": "^14.2.3",
+    "eslint": "9.3.0",
+    "eslint-config-next": "14.2.3",
     "postcss": "8.4.38",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
     "tailwindcss": "3.4.3",
     "typescript": "5.4.5"
   }
