--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next build"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "next": "14.2.4"
   }
 }
