--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "export": "next build"
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
+    "next": "14.2.4",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "next": "14.2.4"
+    "react-dom": "18.3.1"
   }
 }
